--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 
 security.token.secret=JAVAGAS_@123#
+security.token.secret.candidate=JAVAGAS_@123#CANDIDATE
